CHATS_SIT/force-app/main/default/objects/T_SBSD_CASE_INFO__c.object
<CustomObject>
    <description>Method of contact like email</description>
     <!--<enableChangeDataCapture>false</enableChangeDataCapture>-->
    <fields>
        <fullName>CDE_TYPE_INFO_CASE__c</fullName>
        <description>Case Information Type</description>
        <label>Case Information Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00833</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IDN_CASE__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Case ID</description>
        <label>Case ID</label>
        <referenceTo>T_SBSD_CASE__c</referenceTo>
        <relationshipLabel>Case Information</relationshipLabel>
        <relationshipName>T_SBSD_CASE13</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ID External</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TXT_VALUE_INFO_CASE__c</fullName>
        <description>Case Information</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Case Information</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Case Information</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
  	<nameField>
        <displayFormat>{0}</displayFormat>
        <label>Case Information ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Require_Case_info_email_if_type_is_EM</fullName>
        <active>true</active>
        <description>Please provide valid email address if Case Information Type is Email</description>
    <errorConditionFormula>AND(NOT( IDN_CASE__r.Is_Peak_Data__c ), NOT( IDN_CASE__r.Is_CBMS_Data__c ), NOT(REGEX(TXT_VALUE_INFO_CASE__c ,&apos;([a-zA-Z0-9_\\-\\.\\+\\!\\#\\$\\%\\&amp;\\*\\/\\=\\?\\^\\~\\`\\{\\|\\}\\,]+)@((\\[a-z]{1,3}\\.[a-z]{1,3}\\.[a-z]{1,3}\\.)|(([a-zA-Z0-9\\-]+\\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})&apos;)),NOT(ISBLANK(TXT_VALUE_INFO_CASE__c )),ISPICKVAL(CDE_TYPE_INFO_CASE__c,&apos;EM&apos;))</errorConditionFormula>
        <errorDisplayField>TXT_VALUE_INFO_CASE__c</errorDisplayField>
        <errorMessage>Please provide valid email address if Case Information Type is Email</errorMessage>
    </validationRules>
</CustomObject>